istio/00-create-istio-gateway.yaml
kind:       Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name:      northwind-gateway
  namespace: northwind
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number:   80
      name:     http
      protocol: HTTP
    hosts:
    - "*"
